# huginn-proxy

./: .dockerignore  .gitignore  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-MATRIX.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ebpf-agent  Dockerfile.plain  EBPF-SETUP.md  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_ANALYSIS.md  README.md  ROADMAP.md  SECURITY.md  SETTINGS.md  TELEMETRY.md  astro.config.mjs  deny.toml  package-lock.json  package.json  renovate.json
examples/: Cargo.toml  README.md  docker-compose.acme.yml  docker-compose.ebpf.yml  docker-compose.observability.yml  docker-compose.plain.yml  docker-compose.release-ebpf.yml  docker-compose.release-without-ebpf.yml  docker-compose.release.yml  docker-compose.without-ebpf.yml  docker-compose.yml  gen-certs.sh
examples/acme/: gen-pebble-ca.sh  pebble-config.json
examples/backend/: Cargo.toml  Dockerfile
examples/backend-http2/: Cargo.toml  Dockerfile
examples/backend-http2/src/: main.rs
examples/backend/src/: main.rs
examples/bpf_test/: Cargo.toml
examples/bpf_test/src/: main.rs
examples/config/: basic.toml  compose-acme.toml  compose.toml  compose.yaml  fingerprinting.toml  http-only.toml  local-ebpf-test.toml  local.toml  minimal.toml  prometheus.yml  rate-limit-example.toml  tls-only.toml
examples/grafana/dashboards/: huginn-proxy.json
examples/prometheus/: prometheus.yml
examples/src/: lib.rs
huginn-acme/: Cargo.toml  README.md
huginn-acme/src/: constants.rs  dir_cache.rs  error.rs  events.rs  lib.rs  manager.rs
huginn-acme/tests/: acme_event.rs  dir_cache.rs  start_acme.rs
huginn-certs/: Cargo.toml
huginn-certs/src/: certs.rs  crypto_source.rs  error.rs  lib.rs  server_crypto.rs
huginn-certs/tests/: crypto_source.rs  key_permissions.rs  resolver.rs
huginn-ebpf/: Cargo.toml
huginn-ebpf-agent/: Cargo.toml
huginn-ebpf-agent/src/: config.rs  error.rs  healthchecks.rs  lib.rs  main.rs  metrics.rs  routes.rs
huginn-ebpf-agent/src/telemetry/: health.rs  http.rs  metrics.rs  metrics_handler.rs  mod.rs  router.rs  server.rs  status.rs
huginn-ebpf-agent/tests/: config.rs
huginn-ebpf-common/: Cargo.toml
huginn-ebpf-common/src/: constants.rs  headers.rs  keys.rs  lib.rs  quirk_bits.rs  syn_raw.rs  syn_raw_v4.rs  syn_raw_v6.rs
huginn-ebpf-common/tests/: compute_quirks.rs  constants.rs  headers.rs  make_key.rs  quirk_bits.rs
huginn-ebpf/src/: build.rs  config.rs  error.rs  lib.rs  log_level.rs  pin.rs  probe.rs  types.rs
huginn-ebpf/src/probe/: attach.rs  counters.rs  keys.rs  lookup.rs  maps.rs  mod.rs
huginn-ebpf/tests/: keys.rs  parse_syn.rs  pin.rs  probe.rs  stale.rs  types.rs
huginn-proxy/: Cargo.toml
huginn-proxy-bench/: Cargo.toml
huginn-proxy-bench/src/: lib.rs
huginn-proxy-ebpf/: Cargo.toml  build.rs
huginn-proxy-ebpf-common/: Cargo.toml
huginn-proxy-ebpf-common/src/: lib.rs
huginn-proxy-ebpf-xdp/: Cargo.toml
huginn-proxy-ebpf-xdp/.cargo/: config.toml
huginn-proxy-ebpf-xdp/src/: main.rs
huginn-proxy-ebpf/bpf/: xdp.c
huginn-proxy-ebpf/scripts/: build.rs
huginn-proxy-ebpf/scripts/bpf/: xdp.c
huginn-proxy-ebpf/src/: build.rs  lib.rs  probe.rs  types.rs
huginn-proxy-ebpf/tests/: parse_syn.rs  probe.rs  types.rs
huginn-proxy-lib/: Cargo.toml
huginn-proxy-lib/src/: config.rs  error.rs  lib.rs
huginn-proxy-lib/src/backend/: mod.rs  upstream_gateway.rs
huginn-proxy-lib/src/config/: backend.rs  effective.rs  fingerprinting.rs  headers.rs  listen.rs  loader.rs  mod.rs  root.rs  secret.rs  security.rs  telemetry.rs  timeout.rs  tls.rs  types.rs  validation.rs  validator.rs  watcher.rs
huginn-proxy-lib/src/fingerprinting/: extractor.rs  headers.rs  http2_extractor.rs  ja4.rs  mod.rs  tcp_syn.rs  tcp_syn_extractor.rs  tls_extractor.rs  types.rs
huginn-proxy-lib/src/health_check/: check_tcp.rs  counter.rs  health.rs  mod.rs  registry.rs  tests.rs
huginn-proxy-lib/src/load_balancing/: mod.rs  round_robin.rs
huginn-proxy-lib/src/proxy/: accept.rs  acme_runtime.rs  client_pool.rs  context.rs  forwarding.rs  http_result.rs  listener.rs  mod.rs  peer_resolution.rs  proxy_protocol.rs  reload.rs  router.rs  security_context.rs  server.rs  shutdown.rs  synthetic_response.rs  watch.rs
huginn-proxy-lib/src/security/: headers.rs  ip_filter.rs  mod.rs
huginn-proxy-lib/src/tcp/: connection.rs  dns.rs  fingerprint.rs  handler.rs  http_peek.rs  listener.rs  metrics.rs  mod.rs  stream.rs  tls.rs
huginn-proxy-lib/src/telemetry/: health.rs  metrics.rs  metrics_handler.rs  mod.rs  readiness.rs  router.rs  server.rs  status.rs  tracing.rs
huginn-proxy-lib/src/tls/: acceptor.rs  cert_reload.rs  cert_resolver.rs  cipher_suites.rs  composite_resolver.rs  curves.rs  metrics.rs  mod.rs  reloader.rs  session_resumption.rs  setup.rs
huginn-proxy-lib/src/utils/: http.rs  mod.rs
huginn-proxy-lib/tests/: capture_fixtures.rs  config_load.rs  forwarding.rs  helpers.rs  integration.rs  mod.rs  proxy_protocol.rs  proxy_protocol_e2e.rs  tcp_basic.rs
huginn-proxy-lib/tests/backend/: mod.rs
huginn-proxy-lib/tests/config/: effective.rs  header_manipulation.rs  (+6 more)
huginn-proxy-tls/: Cargo.toml
huginn-proxy-tls/src/: lib.rs
huginn-proxy/src/: ebpf.rs  lib.rs  main.rs  validation.rs
huginn-proxy/tests/: cli.rs  ebpf.rs
tests-browsers/: Cargo.toml  README.md
tests-browsers/src/: lib.rs
tests-browsers/tests/: chrome.rs  firefox.rs
tests-e2e/: Cargo.toml
tests-e2e/src/: common.rs  lib.rs
tests-e2e/tests/: acme.rs  acme_helpers.rs  acme_renewal.rs  basic.rs  catch_all.rs  connection_pooling.rs  domain_headers.rs  e2e.rs  fingerprint_akamai.rs  fingerprint_isolation.rs  fingerprint_ja4.rs  fingerprint_spoofing.rs  fingerprint_sync_tcp.rs  fingerprints.rs  header_manipulation.rs  header_override.rs  health_checks.rs  ipv6.rs  load_balance.rs  load_balancing.rs  metrics.rs  path_manipulation.rs  rate_limit.rs  route_ip_filter.rs  security_headers.rs  tls.rs  tls_cipher_curve_config.rs  tls_session_resumption.rs  tls_version_negotiation.rs  webbrowser_chrome.rs  webbrowser_firefox.rs
(+255 files in other folders)
