[workspace]
members = ["examples/backend", "huginn-proxy", "huginn-proxy-lib", "tests-e2e"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
authors = ["Maximiliano Biandratti"]
repository = "https://github.com/biandratti/huginn-proxy"
homepage = "https://github.com/biandratti/huginn-proxy"

[workspace.dependencies]
async-trait = "0.1.89"
bytes = "1.11.0"
criterion = { version = "0.8.1", features = ["html_reports"] }
http = "1.4.0"
http-body-util = "0.1.3"
huginn-net-db = "1.7.2"
huginn-net-http = "1.7.2"
huginn-net-tls = "1.7.2"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
ipnet = "2.10"
notify = "8.2.0"
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-prometheus = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "trace"] }
prometheus = "0.14.0"
reqwest = { version = "0.13.1", features = ["json", "http2"] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["net", "time", "io-util", "macros", "rt-multi-thread", "sync", "signal", "fs"] }
tokio-rustls = "0.26.4"
tokio-util = "0.7.18"
toml = "0.9.11"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
