[workspace]
members = [
    "huginn-ebpf",
    "huginn-ebpf-agent",
    "huginn-ebpf-common",
    "huginn-proxy",
    "huginn-proxy-lib",
    "tests-browsers",
    "tests-e2e",
]
# huginn-ebpf-xdp is intentionally NOT a workspace member:
# it uses a different toolchain (nightly) and target (bpfel-unknown-none),
# and is compiled independently by huginn-ebpf's build.rs.
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94.1"
license = "MIT OR Apache-2.0"
authors = ["Maximiliano Biandratti"]
repository = "https://github.com/biandratti/huginn-proxy"
homepage = "https://github.com/biandratti/huginn-proxy"

[workspace.dependencies]
ahash = "0.8.12"
arc-swap = "1.9.1"
aya = "0.13.1"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
http = "1.4.0"
http-body-util = "0.1.3"
huginn-ebpf-common = { path = "huginn-ebpf-common" }
huginn-net-http = { version = "2.0.0-rc", features = ["akamai"] }
huginn-net-tcp = { version = "2.0.0-rc", features = ["syn"] }
huginn-net-tls = { version = "2.0.0-rc", features = ["stable-v1"] }
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
ipnet = "2.12.0"
notify = "8.2.0"
opentelemetry = { version = "0.32.0", features = ["metrics"] }
opentelemetry-prometheus = "0.32.0"
opentelemetry_sdk = { version = "0.32.0", features = ["metrics", "trace"] }
pingora-limits = "0.8.0"
pingora-timeout = "0.8.0"
prometheus = "0.14.0"
rcgen = "0.14.8"
reqwest = { version = "0.13.3", features = ["json", "http2"] }
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_norway = "0.9.42"
serial_test = "3.4.0"
socket2 = "0.6.3"
tempfile = "3.27.0"
thirtyfour = "0.37.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["net", "time", "io-util", "macros", "rt-multi-thread", "sync", "signal", "fs"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

[profile.release]
codegen-units = 4
incremental = true
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
