[package]
name = "huginn-proxy-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "huginn_proxy_examples"
path = "src/lib.rs"

[dependencies]


