[package]
name = "huginn-acme"
version = "0.0.2-beta.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
async-trait.workspace = true
aws-lc-rs.workspace = true
base64.workspace = true
blocking.workspace = true
futures-util.workspace = true
rustls-acme.workspace = true
rustls-pki-types.workspace = true
rustls-platform-verifier.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
