[package]
name = "huginn-certs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
arc-swap.workspace = true
rustls-pki-types.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
rcgen.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
