[package]
name = "huginn-ebpf-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
huginn-ebpf = { path = "../huginn-ebpf", version = "0.0.1" }
tokio = { workspace = true, features = ["rt", "signal", "macros"] }
opentelemetry.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry_sdk = { workspace = true, features = ["metrics"] }
prometheus.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
