[package]
name = "huginn-ebpf-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
http-body-util.workspace = true
huginn-ebpf = { path = "../huginn-ebpf", version = "0.0.1" }
hyper.workspace = true
hyper-util.workspace = true
opentelemetry.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry_sdk = { workspace = true, features = ["metrics"] }
prometheus.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "net", "signal", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
