[package]
name = "huginn-ebpf"
version = "0.0.3-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
build = "src/build.rs"

[dependencies]
aya.workspace = true
aya-log.workspace = true
huginn-ebpf-common = { workspace = true, features = ["aya"] }
huginn-net-tcp.workspace = true
log.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
huginn-ebpf-common = { workspace = true }
