[package]
name = "huginn-proxy-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "huginn_proxy_bench"
path = "src/lib.rs"

[dependencies]


