[package]
name = "huginn-proxy-ebpf"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
build = "src/build.rs"

[dependencies]
aya.workspace = true
huginn-net-db.workspace = true
huginn-net-tcp.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
