[package]
name = "huginn-proxy-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
huginn-net-http.workspace = true
huginn-net-tls.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
tracing.workspace = true
