[package]
name = "huginn-proxy-lib"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ahash.workspace = true
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
huginn-net-http.workspace = true
huginn-net-tls.workspace = true
hyper.workspace = true
hyper-util.workspace = true
ipnet.workspace = true
notify.workspace = true
opentelemetry.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry_sdk = { workspace = true, features = ["metrics", "trace"] }
prometheus.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion = { workspace = true }
rcgen.workspace = true
reqwest = { workspace = true, features = ["json", "http2"] }
tempfile.workspace = true

[[bench]]
name = "bench_proxy"
path = "../benches/bench_proxy.rs"
harness = false
