[package]
name = "huginn-proxy-lib"
version = "0.0.3-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ahash.workspace = true
arc-swap.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
huginn-certs.workspace = true
huginn-net-http.workspace = true
huginn-net-tcp.workspace = true
huginn-net-tls.workspace = true
hyper.workspace = true
hyper-util.workspace = true
ipnet.workspace = true
notify.workspace = true
opentelemetry.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry_sdk = { workspace = true, features = ["metrics", "trace"] }
pingora-limits.workspace = true
pingora-timeout.workspace = true
ppp.workspace = true
prometheus.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion = { workspace = true }
http.workspace = true
ipnet.workspace = true
rcgen.workspace = true
reqwest = { workspace = true, features = ["json", "http2"] }
serial_test.workspace = true
tempfile.workspace = true

[[bench]]
name = "bench_fingerprinting"
path = "../benches/bench_fingerprinting.rs"
harness = false

[[bench]]
name = "bench_proxy"
path = "../benches/bench_proxy.rs"
harness = false
