[package]
name = "huginn-proxy-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = true

[lib]
name = "huginn_proxy_tls"
path = "src/lib.rs"

[dependencies]


