[package]
name = "huginn-proxy"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
ebpf-tcp = ["dep:huginn-proxy-ebpf"]

[dependencies]
huginn-proxy-ebpf = { path = "../huginn-proxy-ebpf", version = "0.0.1", optional = true }
huginn-proxy-lib = { path = "../huginn-proxy-lib", version = "0.0.1" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
