[package]
name = "huginn-proxy"
version = "0.0.2-beta.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
acme = ["dep:huginn-acme"]
ebpf-tcp = ["dep:huginn-ebpf"]

[dependencies]
arc-swap.workspace = true
clap.workspace = true
huginn-acme = { workspace = true, optional = true }
huginn-ebpf = { path = "../huginn-ebpf", version = "0.0.2-beta.1", optional = true }
huginn-proxy-lib = { path = "../huginn-proxy-lib", version = "0.0.2-beta.1" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
