[package]
name = "tests-browsers"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
huginn-proxy-lib = { path = "../huginn-proxy-lib" }
serde_json.workspace = true
serial_test = "3"
thirtyfour = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[test]]
name = "chrome"
path = "tests/chrome.rs"

[[test]]
name = "firefox"
path = "tests/firefox.rs"
