[package]
name = "tests-browsers"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "tests_browsers"
path = "src/lib.rs"

[dependencies]
serde_json.workspace = true
serial_test.workspace = true
thirtyfour = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[test]]
name = "chrome"
path = "tests/chrome.rs"

[[test]]
name = "firefox"
path = "tests/firefox.rs"
