[package]
name = "tests-e2e"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
huginn-proxy-lib = { path = "../huginn-proxy-lib" }
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[test]]
name = "e2e"
path = "tests/e2e.rs"

