[package]
name = "tests-e2e"
version = "0.0.2-beta.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
huginn-proxy-lib = { path = "../huginn-proxy-lib", version = "0.0.2-beta.1" }
reqwest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
serial_test.workspace = true
tokio-rustls.workspace = true
x509-parser.workspace = true

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[test]]
name = "acme"
path = "tests/acme.rs"

