[package]
name = "backend-http2"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "macros", "signal"] }
hyper = { version = "1.8.1", features = ["server", "http2", "http1"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.19", features = ["full"] }
bytes = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

