[package]
name = "backend-http2"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

