# Dev-only: load XDP ELF and check expected maps exist.
# Not part of any production binary. Run: cargo run -p bpf-test

[package]
name = "bpf-test"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
aya.workspace = true
huginn-ebpf = { path = "../../huginn-ebpf" }
tracing.workspace = true
tracing-subscriber.workspace = true
